Update: added password recovery
